src/static/css/styles.css
body {
    margin: 0;
    padding: 0;
    font-size: 17px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-weight: 500;
    color: #201600;
}

.text-center {
    text-align: center;
}

.header {
    font-size: 18px;
    font-weight: 700;
    padding: 10px 10px 1px 10px;
}

.header .header-inner {
    max-width: 1024px;
    margin: 0 auto;
}

.header .header-inner > a, .header .header-inner > div {
    display: inline-block;
    vertical-align: top;
}

.header .header-inner > a {
    position: relative;
    padding-left: 29px;
}

.header .header-inner > a > img {
    position: absolute;
    left: 0;
    top: 0;
}

.header a {
    text-decoration: none;
    color: #201600;
}

.content {
    max-width: 1024px;
    margin: 5% auto;
    padding: 10px;
    box-sizing: border-box;
    background: #fff;
    z-index: 1;
    line-height: 1.5em;
}

input {
    display: inline-block;
    width: 100%;
    margin: 8px 0;
    border: 1px solid #ccc;
    box-shadow: inset 0 1px 3px #ddd;
    border-radius: 4px;
    box-sizing: border-box;
    padding: 12px 20px;
    outline: none;
}

input:focus {
    border: 1px solid #555
}

@media (min-width: 1024px) {
    .left-right-art {
        position: fixed;
        bottom: -300px;
        right: -300px;
        height: 600px;
        width: 600px;
        background: #201600;
        transform: rotate(45deg);
        z-index: -1;
    }
}

.search-results .no-results {
    font-size: 12px;
}

.search-result {
    display: block;
    padding: 5px;
    margin: 3px 0;
    text-align: left;
    text-decoration: none;
    color: #201600;
    border: 1px solid #ccc;
}

.search-result .context-title {
    color: blue;
    font-size: 18px;
}

.search-result .context-link {
    font-size: 11px;
}

.guides {
    text-align: left;
}

.guides .guide {
    position: relative;
    padding: 15px;
    overflow: hidden;
    text-decoration: none;
    color: #fff;
    background: #201600;
    box-sizing: border-box;
    text-align: left;
    border-radius: 4px;
}

.guides .guide .icon-container {
    position: relative;
    display: inline-block;
    vertical-align: middle;
    padding: 5px;
    margin-right: 10px;
}

.guides .guide .icon-container img {
    width: 45px;
    image-rendering: -webkit-optimize-contrast;
}

.guides .guide .name,
.guides .guide .arrow {
    display: inline-block;
    vertical-align: middle;
}

.guides .guide .arrow {
    position: absolute;
    right: 12px;
    top: calc(50% - 8px);
}

.guides .guide .coming-soon {
    font-size: 11px;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
}

.guides .guide-items {
    display: grid;
    justify-items: stretch;
    gap: 10px;
    grid-template-columns: repeat(2, calc(50% - 5px));
}

@media (max-width: 786px) {
    .guides .guide-items {
        display: block;
    }

    .guides .guide {
        display: block;
        width: 100%;
        margin: 10px 0;
        box-sizing: border-box;
    }
}

.code {
    position: relative;
    white-space: pre;
    background: #201600;
    color: #fff;
    padding: 5px 0;
    box-shadow: inset 5px 5px 8px rgb(0 0 0);
    overflow-y: auto;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
}

.code .title {
    padding: 0 10px;
    font-weight: 500;
}

.code .line {
    padding: 0 10px;
    font-family: monospace;
}

.code .line.highlight {
    background: #383830;
}

.code .line .line-number {
    display: inline-block;
    width: 14px;
    padding-right: 10px;
    user-select: none;
}

.contribute-code-snippet {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 12px;
    text-align: center;
}

.contribute-code-snippet a {
    color: #000;
    text-decoration: none;
}

.index-guide-item .index-guide-link img {
    width: 16px;
}

.screenshot, .code {
    box-shadow: 0 0 30px rgba(32, 22, 0, 0.25);
    border-radius: 3px;
}

.screenshot {
    margin: 10px 0;
    padding: 0 0 35px 0;
    text-align: center;
    background: #201600;
    color: #fff;
}

.screenshot .title {
    font-weight: 500;
    padding: 10px 0 15px 10px;
    text-align: left;
}

.screenshot img {
    box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
    border-radius: 5px;
    background: #fff;
    padding: 15px;
}

.related-parameter {
    margin: 10px 0;
    padding: 5px 10px;
    background: #201600;
    color: #fff;
    font-size: 13px;
}

.related-parameter span {
    font-family: monospace;
}

.related-parameter span.as {
    color: deeppink;
}

